--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_slidable: ^3.1.1
   intl: ^0.19.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
